src/App.css
@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Mukta&display=swap');
*{
  padding:0;
  margin:0;
  box-sizing: border-box;
}

.App {
  text-align: center;
}
.wrapper{
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 20px;
}

.wrapper h1{
  width: 100%;
  text-align: center;
}

